[gd_scene load_steps=27 format=4 uid="uid://dnvktlw5q0u8y"]

[ext_resource type="Texture2D" uid="uid://dyv34in625jl4" path="res://assets/Tileset1 (1).png" id="1_4ewcp"]
[ext_resource type="Texture2D" uid="uid://cv4uf3aycviv" path="res://assets/pouch person.png" id="2_xqi64"]
[ext_resource type="Texture2D" uid="uid://bviykps1xkm1o" path="res://assets/goCord.png" id="3_0v2fr"]
[ext_resource type="Script" path="res://scripts/ButtonScripts/pouch.gd" id="3_06ajq"]
[ext_resource type="Texture2D" uid="uid://mem73q4qhu0" path="res://assets/pouchMenu.png" id="4_p5f6h"]
[ext_resource type="PackedScene" uid="uid://uwue8fgsf3ss" path="res://scenes/menus/consumable_menu.tscn" id="6_3e3yh"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4f4um"]
texture = ExtResource("1_4ewcp")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
2:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
1:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
0:11/0 = 0
1:11/0 = 0
0:12/0 = 0
1:12/0 = 0
0:13/0 = 0
1:13/0 = 0

[sub_resource type="TileSet" id="TileSet_4qmme"]
sources/0 = SubResource("TileSetAtlasSource_4f4um")

[sub_resource type="Animation" id="Animation_h14pg"]
resource_name = "close"
length = 0.4
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/BG/pouch")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"toggleCord"
}, {
"args": [],
"method": &"go"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/BG/pouch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"close"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Camera2D/BG/pouch")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"toggleMenus"
}]
}

[sub_resource type="Animation" id="Animation_ps708"]
resource_name = "open"
length = 0.4
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D/BG/pouch")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"toggleCord"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera2D/BG/pouch")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"toggleMenus"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ree6"]
_data = {
"close": SubResource("Animation_h14pg"),
"open": SubResource("Animation_ps708")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_e06os"]
atlas = ExtResource("2_xqi64")
region = Rect2(752, 0, 376, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e302"]
atlas = ExtResource("2_xqi64")
region = Rect2(376, 0, 376, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_4inib"]
atlas = ExtResource("2_xqi64")
region = Rect2(376, 0, 376, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3tm8"]
atlas = ExtResource("2_xqi64")
region = Rect2(752, 0, 376, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kjd8"]
atlas = ExtResource("2_xqi64")
region = Rect2(1128, 0, 376, 224)

[sub_resource type="SpriteFrames" id="SpriteFrames_o0nb2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e06os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e302")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4inib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3tm8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kjd8")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_11te7"]
radius = 40.0
height = 96.0

[sub_resource type="AtlasTexture" id="AtlasTexture_h20bj"]
atlas = ExtResource("4_p5f6h")
region = Rect2(864, 0, 432, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtt2y"]
atlas = ExtResource("4_p5f6h")
region = Rect2(432, 0, 432, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_2neum"]
atlas = ExtResource("4_p5f6h")
region = Rect2(432, 0, 432, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmyx8"]
atlas = ExtResource("4_p5f6h")
region = Rect2(864, 0, 432, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1w30"]
atlas = ExtResource("4_p5f6h")
region = Rect2(1296, 0, 432, 224)

[sub_resource type="SpriteFrames" id="SpriteFrames_fvmgx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h20bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtt2y")
}],
"loop": false,
"name": &"close",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2neum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmyx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1w30")
}],
"loop": false,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j5cp2"]
texture = ExtResource("1_4ewcp")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
0:3/0 = 0
1:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
3:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
2:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
1:9/0 = 0
5:9/0 = 0
0:10/0 = 0
1:10/0 = 0
0:11/0 = 0
1:11/0 = 0
0:12/0 = 0
1:12/0 = 0
0:13/0 = 0
1:13/0 = 0

[sub_resource type="TileSet" id="TileSet_pgy8k"]
sources/0 = SubResource("TileSetAtlasSource_j5cp2")

[node name="pouch_menu" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.48, 2.68)

[node name="BG" type="TileMapLayer" parent="Camera2D"]
tile_map_data = PackedByteArray("AADy//n/AAABAAEAAADy//r/AAABAAEAAADy//v/AAABAAEAAADy//z/AAABAAEAAADy//3/AAABAAEAAADy//7/AAABAAEAAADy////AAABAAEAAADy/wAAAAABAAEAAADy/wEAAAABAAEAAADy/wIAAAABAAEAAADy/wMAAAABAAEAAADy/wQAAAABAAEAAADy/wUAAAABAAEAAADy/wYAAAABAAEAAADz//n/AAABAAEAAADz//r/AAABAAEAAADz//v/AAABAAEAAADz//z/AAABAAEAAADz//3/AAABAAEAAADz//7/AAABAAEAAADz////AAABAAEAAADz/wAAAAABAAEAAADz/wEAAAABAAEAAADz/wIAAAABAAEAAADz/wMAAAABAAEAAADz/wQAAAABAAEAAADz/wUAAAABAAEAAADz/wYAAAABAAEAAAD0//n/AAABAAEAAAD0//r/AAABAAEAAAD0//v/AAABAAEAAAD0//z/AAABAAEAAAD0//3/AAABAAEAAAD0//7/AAABAAEAAAD0////AAABAAEAAAD0/wAAAAABAAEAAAD0/wEAAAABAAEAAAD0/wIAAAABAAEAAAD0/wMAAAABAAEAAAD0/wQAAAABAAEAAAD0/wUAAAABAAEAAAD0/wYAAAABAAEAAAD1//n/AAABAAEAAAD1//r/AAABAAEAAAD1//v/AAABAAEAAAD1//z/AAABAAEAAAD1//3/AAABAAEAAAD1//7/AAABAAEAAAD1////AAABAAEAAAD1/wAAAAABAAEAAAD1/wEAAAABAAEAAAD1/wIAAAABAAEAAAD1/wMAAAABAAEAAAD1/wQAAAABAAEAAAD1/wUAAAABAAEAAAD1/wYAAAABAAEAAAD2//n/AAABAAEAAAD2//r/AAABAAEAAAD2//v/AAABAAEAAAD2//z/AAABAAEAAAD2//3/AAABAAEAAAD2//7/AAABAAEAAAD2////AAABAAEAAAD2/wAAAAABAAEAAAD2/wEAAAABAAEAAAD2/wIAAAABAAEAAAD2/wMAAAABAAEAAAD2/wQAAAABAAEAAAD2/wUAAAABAAEAAAD2/wYAAAABAAEAAAD3//n/AAABAAEAAAD3//r/AAABAAEAAAD3//v/AAABAAEAAAD3//z/AAABAAEAAAD3//3/AAABAAEAAAD3//7/AAABAAEAAAD3////AAABAAEAAAD3/wAAAAABAAEAAAD3/wEAAAABAAEAAAD3/wIAAAABAAEAAAD3/wMAAAABAAEAAAD3/wQAAAABAAEAAAD3/wUAAAABAAEAAAD3/wYAAAABAAEAAAD4//n/AAABAAEAAAD4//r/AAABAAEAAAD4//v/AAABAAEAAAD4//z/AAABAAEAAAD4//3/AAABAAEAAAD4//7/AAABAAEAAAD4////AAABAAEAAAD4/wAAAAABAAEAAAD4/wEAAAABAAEAAAD4/wIAAAABAAEAAAD4/wMAAAABAAEAAAD4/wQAAAABAAEAAAD4/wUAAAABAAEAAAD4/wYAAAABAAEAAAD5//n/AAABAAEAAAD5//r/AAABAAEAAAD5//v/AAABAAEAAAD5//z/AAABAAEAAAD5//3/AAABAAEAAAD5//7/AAABAAEAAAD5////AAABAAEAAAD5/wAAAAABAAEAAAD5/wEAAAABAAEAAAD5/wIAAAABAAEAAAD5/wMAAAABAAEAAAD5/wQAAAABAAEAAAD5/wUAAAABAAEAAAD5/wYAAAABAAEAAAD6//n/AAABAAEAAAD6//r/AAABAAEAAAD6//v/AAABAAEAAAD6//z/AAABAAEAAAD6//3/AAABAAEAAAD6//7/AAABAAEAAAD6////AAABAAEAAAD6/wAAAAABAAEAAAD6/wEAAAABAAEAAAD6/wIAAAABAAEAAAD6/wMAAAABAAEAAAD6/wQAAAABAAEAAAD6/wUAAAABAAEAAAD6/wYAAAABAAEAAAD7//n/AAABAAEAAAD7//r/AAABAAEAAAD7//v/AAABAAEAAAD7//z/AAABAAEAAAD7//3/AAABAAEAAAD7//7/AAABAAEAAAD7////AAABAAEAAAD7/wAAAAABAAEAAAD7/wEAAAABAAEAAAD7/wIAAAABAAEAAAD7/wMAAAABAAEAAAD7/wQAAAABAAEAAAD7/wUAAAABAAEAAAD7/wYAAAABAAEAAAD8//n/AAABAAEAAAD8//r/AAABAAEAAAD8//v/AAABAAEAAAD8//z/AAABAAEAAAD8//3/AAABAAEAAAD8//7/AAABAAEAAAD8////AAABAAEAAAD8/wAAAAABAAEAAAD8/wEAAAABAAEAAAD8/wIAAAABAAEAAAD8/wMAAAABAAEAAAD8/wQAAAABAAEAAAD8/wUAAAABAAEAAAD8/wYAAAABAAEAAAD9//n/AAABAAEAAAD9//r/AAABAAEAAAD9//v/AAABAAEAAAD9//z/AAABAAEAAAD9//3/AAABAAEAAAD9//7/AAABAAEAAAD9////AAABAAEAAAD9/wAAAAABAAEAAAD9/wEAAAABAAEAAAD9/wIAAAABAAEAAAD9/wMAAAABAAEAAAD9/wQAAAABAAEAAAD9/wUAAAABAAEAAAD9/wYAAAABAAEAAAD+//n/AAABAAEAAAD+//r/AAABAAEAAAD+//v/AAABAAEAAAD+//z/AAABAAEAAAD+//3/AAABAAEAAAD+//7/AAABAAEAAAD+////AAABAAEAAAD+/wAAAAABAAEAAAD+/wEAAAABAAEAAAD+/wIAAAABAAEAAAD+/wMAAAABAAEAAAD+/wQAAAABAAEAAAD+/wUAAAABAAEAAAD+/wYAAAABAAEAAAD///n/AAABAAEAAAD///r/AAABAAEAAAD///v/AAABAAEAAAD///z/AAABAAEAAAD///3/AAABAAEAAAD///7/AAABAAEAAAD/////AAABAAEAAAD//wAAAAABAAEAAAD//wEAAAABAAEAAAD//wIAAAABAAEAAAD//wMAAAABAAEAAAD//wQAAAABAAEAAAD//wUAAAABAAEAAAD//wYAAAABAAEAAAAAAPn/AAABAAEAAAAAAPr/AAABAAEAAAAAAPv/AAABAAEAAAAAAPz/AAABAAEAAAAAAP3/AAABAAEAAAAAAP7/AAABAAEAAAAAAP//AAABAAEAAAAAAAAAAAABAAEAAAAAAAEAAAABAAEAAAAAAAIAAAABAAEAAAAAAAMAAAABAAEAAAAAAAQAAAABAAEAAAAAAAUAAAABAAEAAAAAAAYAAAABAAEAAAABAPn/AAABAAEAAAABAPr/AAABAAEAAAABAPv/AAABAAEAAAABAPz/AAABAAEAAAABAP3/AAABAAEAAAABAP7/AAABAAEAAAABAP//AAABAAEAAAABAAAAAAABAAEAAAABAAEAAAABAAEAAAABAAIAAAABAAEAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAABAAYAAAABAAEAAAACAPn/AAABAAEAAAACAPr/AAABAAEAAAACAPv/AAABAAEAAAACAPz/AAABAAEAAAACAP3/AAABAAEAAAACAP7/AAABAAEAAAACAP//AAABAAEAAAACAAAAAAABAAEAAAACAAEAAAABAAEAAAACAAIAAAABAAEAAAACAAMAAAABAAEAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAACAAYAAAABAAEAAAADAPn/AAABAAEAAAADAPr/AAABAAEAAAADAPv/AAABAAEAAAADAPz/AAABAAEAAAADAP3/AAABAAEAAAADAP7/AAABAAEAAAADAP//AAABAAEAAAADAAAAAAABAAEAAAADAAEAAAABAAEAAAADAAIAAAABAAEAAAADAAMAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAADAAYAAAABAAEAAAAEAPn/AAABAAEAAAAEAPr/AAABAAEAAAAEAPv/AAABAAEAAAAEAPz/AAABAAEAAAAEAP3/AAABAAEAAAAEAP7/AAABAAEAAAAEAP//AAABAAEAAAAEAAAAAAABAAEAAAAEAAEAAAABAAEAAAAEAAIAAAABAAEAAAAEAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAAEAAYAAAABAAEAAAAFAPn/AAABAAEAAAAFAPr/AAABAAEAAAAFAPv/AAABAAEAAAAFAPz/AAABAAEAAAAFAP3/AAABAAEAAAAFAP7/AAABAAEAAAAFAP//AAABAAEAAAAFAAAAAAABAAEAAAAFAAEAAAABAAEAAAAFAAIAAAABAAEAAAAFAAMAAAABAAEAAAAFAAQAAAABAAEAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAGAPn/AAABAAEAAAAGAPr/AAABAAEAAAAGAPv/AAABAAEAAAAGAPz/AAABAAEAAAAGAP3/AAABAAEAAAAGAP7/AAABAAEAAAAGAP//AAABAAEAAAAGAAAAAAABAAEAAAAGAAEAAAABAAEAAAAGAAIAAAABAAEAAAAGAAMAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAABAAEAAAAGAAYAAAABAAEAAAAHAPn/AAABAAEAAAAHAPr/AAABAAEAAAAHAPv/AAABAAEAAAAHAPz/AAABAAEAAAAHAP3/AAABAAEAAAAHAP7/AAABAAEAAAAHAP//AAABAAEAAAAHAAAAAAABAAEAAAAHAAEAAAABAAEAAAAHAAIAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAAHAAYAAAABAAEAAAAIAPn/AAABAAEAAAAIAPr/AAABAAEAAAAIAPv/AAABAAEAAAAIAPz/AAABAAEAAAAIAP3/AAABAAEAAAAIAP7/AAABAAEAAAAIAP//AAABAAEAAAAIAAAAAAABAAEAAAAIAAEAAAABAAEAAAAIAAIAAAABAAEAAAAIAAMAAAABAAEAAAAIAAQAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAJAPn/AAABAAEAAAAJAPr/AAABAAEAAAAJAPv/AAABAAEAAAAJAPz/AAABAAEAAAAJAP3/AAABAAEAAAAJAP7/AAABAAEAAAAJAP//AAABAAEAAAAJAAAAAAABAAEAAAAJAAEAAAABAAEAAAAJAAIAAAABAAEAAAAJAAMAAAABAAEAAAAJAAQAAAABAAEAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAKAPn/AAABAAEAAAAKAPr/AAABAAEAAAAKAPv/AAABAAEAAAAKAPz/AAABAAEAAAAKAP3/AAABAAEAAAAKAP7/AAABAAEAAAAKAP//AAABAAEAAAAKAAAAAAABAAEAAAAKAAEAAAABAAEAAAAKAAIAAAABAAEAAAAKAAMAAAABAAEAAAAKAAQAAAABAAEAAAAKAAUAAAABAAEAAAAKAAYAAAABAAEAAAALAPn/AAABAAEAAAALAPr/AAABAAEAAAALAPv/AAABAAEAAAALAPz/AAABAAEAAAALAP3/AAABAAEAAAALAP7/AAABAAEAAAALAP//AAABAAEAAAALAAAAAAABAAEAAAALAAEAAAABAAEAAAALAAIAAAABAAEAAAALAAMAAAABAAEAAAALAAQAAAABAAEAAAALAAUAAAABAAEAAAALAAYAAAABAAEAAAAMAPn/AAABAAEAAAAMAPr/AAABAAEAAAAMAPv/AAABAAEAAAAMAPz/AAABAAEAAAAMAP3/AAABAAEAAAAMAP7/AAABAAEAAAAMAP//AAABAAEAAAAMAAAAAAABAAEAAAAMAAEAAAABAAEAAAAMAAIAAAABAAEAAAAMAAMAAAABAAEAAAAMAAQAAAABAAEAAAAMAAUAAAABAAEAAAAMAAYAAAABAAEAAAANAPn/AAABAAEAAAANAPr/AAABAAEAAAANAPv/AAABAAEAAAANAPz/AAABAAEAAAANAP3/AAABAAEAAAANAP7/AAABAAEAAAANAP//AAABAAEAAAANAAAAAAABAAEAAAANAAEAAAABAAEAAAANAAIAAAABAAEAAAANAAMAAAABAAEAAAANAAQAAAABAAEAAAANAAUAAAABAAEAAAANAAYAAAABAAEAAADx//j/AAAJAAAAAADy//j/AAAJAAAAAADz//j/AAAJAAAAAAD0//j/AAAJAAAAAAD1//j/AAAJAAAAAAD2//j/AAAJAAAAAAD3//j/AAAJAAAAAAD4//j/AAAJAAAAAAD5//j/AAAJAAAAAAD6//j/AAAJAAAAAAD7//j/AAAJAAAAAAD8//j/AAAJAAAAAAD9//j/AAAJAAAAAAD+//j/AAAJAAAAAAD///j/AAAJAAAAAAAAAPj/AAAJAAAAAAABAPj/AAAJAAAAAAACAPj/AAAJAAAAAAADAPj/AAAJAAAAAAAEAPj/AAAJAAAAAAAFAPj/AAAJAAAAAAAGAPj/AAAJAAAAAAAHAPj/AAAJAAAAAAAIAPj/AAAJAAAAAAAJAPj/AAAJAAAAAAAKAPj/AAAJAAAAAAALAPj/AAAJAAAAAAAMAPj/AAAJAAAAAAANAPj/AAAJAAAAAAAOAPj/AAAJAAAAAAAOAPn/AAAJAAAAAAAOAPr/AAAJAAAAAAAOAPv/AAAJAAAAAAAOAPz/AAAJAAAAAAAOAP3/AAAJAAAAAAAOAP7/AAAJAAAAAAAOAP//AAAJAAAAAAAOAAAAAAAJAAAAAAAOAAEAAAAJAAAAAAAOAAIAAAAJAAAAAAAOAAMAAAAJAAAAAAAOAAQAAAAJAAAAAAAOAAUAAAAJAAAAAAAOAAYAAAAJAAAAAAAOAAcAAAAJAAAAAADx/wcAAAAJAAAAAADy/wcAAAAJAAAAAADz/wcAAAAJAAAAAAD0/wcAAAAJAAAAAAD1/wcAAAAJAAAAAAD2/wcAAAAJAAAAAAD3/wcAAAAJAAAAAAD4/wcAAAAJAAAAAAD5/wcAAAAJAAAAAAD6/wcAAAAJAAAAAAD7/wcAAAAJAAAAAAD8/wcAAAAJAAAAAAD9/wcAAAAJAAAAAAD+/wcAAAAJAAAAAAD//wcAAAAJAAAAAAAAAAcAAAAJAAAAAAABAAcAAAAJAAAAAAACAAcAAAAJAAAAAAADAAcAAAAJAAAAAAAEAAcAAAAJAAAAAAAFAAcAAAAJAAAAAAAGAAcAAAAJAAAAAAAHAAcAAAAJAAAAAAAIAAcAAAAJAAAAAAAJAAcAAAAJAAAAAAAKAAcAAAAJAAAAAAALAAcAAAAJAAAAAAAMAAcAAAAJAAAAAAANAAcAAAAJAAAAAADx//n/AAAJAAAAAADx//r/AAAJAAAAAADx//v/AAAJAAAAAADx//z/AAAJAAAAAADx//3/AAAJAAAAAADx//7/AAAJAAAAAADx////AAAJAAAAAADx/wAAAAAJAAAAAADx/wEAAAAJAAAAAADx/wIAAAAJAAAAAADx/wMAAAAJAAAAAADx/wQAAAAJAAAAAADx/wUAAAAJAAAAAADx/wYAAAAJAAAAAAA=")
tile_set = SubResource("TileSet_4qmme")

[node name="pouch" type="Node2D" parent="Camera2D/BG"]
script = ExtResource("3_06ajq")

[node name="timing" type="AnimationPlayer" parent="Camera2D/BG/pouch"]
root_node = NodePath("../../../..")
libraries = {
"": SubResource("AnimationLibrary_1ree6")
}

[node name="guy" type="AnimatedSprite2D" parent="Camera2D/BG/pouch"]
position = Vector2(-80, 32)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_o0nb2")
animation = &"close"
autoplay = "open"

[node name="goCord" type="Sprite2D" parent="Camera2D/BG/pouch"]
position = Vector2(-128, -56)
texture = ExtResource("3_0v2fr")

[node name="Area2D" type="Area2D" parent="Camera2D/BG/pouch/goCord"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/BG/pouch/goCord/Area2D"]
position = Vector2(-8, -8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_11te7")

[node name="pouch_sprite" type="AnimatedSprite2D" parent="Camera2D/BG/pouch"]
position = Vector2(6, -2)
sprite_frames = SubResource("SpriteFrames_fvmgx")
animation = &"open"
autoplay = "open"
frame = 2
frame_progress = 1.0

[node name="ConsumableMenu" parent="Camera2D/BG/pouch" instance=ExtResource("6_3e3yh")]
position = Vector2(-8, -40)

[node name="Outline" type="TileMapLayer" parent="Camera2D/BG"]
tile_map_data = PackedByteArray("AADy//n/AAAAAAAAAAANAPn/AAACAAAAAAANAAYAAAACAAIAAADy/wYAAAAAAAIAAADy//r/AAAAAAEAAADy//v/AAAAAAEAAADy//z/AAAAAAEAAADy//3/AAAAAAEAAADy//7/AAAAAAEAAADy////AAAAAAEAAADy/wAAAAAAAAEAAADy/wEAAAAAAAEAAADy/wIAAAAAAAEAAADy/wMAAAAAAAEAAADy/wQAAAAAAAEAAADy/wUAAAAAAAEAAADz/wYAAAABAAIAAAD0/wYAAAABAAIAAAD1/wYAAAABAAIAAAD2/wYAAAABAAIAAAD3/wYAAAABAAIAAAD4/wYAAAABAAIAAAD5/wYAAAABAAIAAAD6/wYAAAABAAIAAAD7/wYAAAABAAIAAAD8/wYAAAABAAIAAAD9/wYAAAABAAIAAAD+/wYAAAABAAIAAAD//wYAAAABAAIAAAAAAAYAAAABAAIAAAABAAYAAAABAAIAAAACAAYAAAABAAIAAAADAAYAAAABAAIAAAAEAAYAAAABAAIAAAAFAAYAAAABAAIAAAAGAAYAAAABAAIAAAAHAAYAAAABAAIAAAAIAAYAAAABAAIAAAAJAAYAAAABAAIAAAAKAAYAAAABAAIAAAALAAYAAAABAAIAAAAMAAYAAAABAAIAAAANAPr/AAACAAEAAAANAPv/AAACAAEAAAANAPz/AAACAAEAAAANAP3/AAACAAEAAAANAP7/AAACAAEAAAANAP//AAACAAEAAAANAAAAAAACAAEAAAANAAEAAAACAAEAAAANAAIAAAACAAEAAAANAAMAAAACAAEAAAANAAQAAAACAAEAAAANAAUAAAACAAEAAADz//n/AAABAAAAAAD0//n/AAABAAAAAAD1//n/AAABAAAAAAD2//n/AAABAAAAAAD3//n/AAABAAAAAAD4//n/AAABAAAAAAD5//n/AAABAAAAAAD6//n/AAABAAAAAAD7//n/AAABAAAAAAD8//n/AAABAAAAAAD9//n/AAABAAAAAAD+//n/AAABAAAAAAD///n/AAABAAAAAAAAAPn/AAABAAAAAAABAPn/AAABAAAAAAACAPn/AAABAAAAAAADAPn/AAABAAAAAAAEAPn/AAABAAAAAAAFAPn/AAABAAAAAAAGAPn/AAABAAAAAAAHAPn/AAABAAAAAAAIAPn/AAABAAAAAAAJAPn/AAABAAAAAAAKAPn/AAABAAAAAAALAPn/AAABAAAAAAAMAPn/AAABAAAAAAA=")
tile_set = SubResource("TileSet_pgy8k")

[connection signal="mouse_entered" from="Camera2D/BG/pouch/goCord/Area2D" to="Camera2D/BG/pouch" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/BG/pouch/goCord/Area2D" to="Camera2D/BG/pouch" method="_on_area_2d_mouse_exited"]
